fix: button nav , z-index ajust

--- a/src/app/layouts/Nav/styles.module.scss
+++ b/src/app/layouts/Nav/styles.module.scss
@@ -29,6 +29,7 @@
   background-color: transparent;
   border: none;
 
+  z-index: 998;
 
   
   .line2,
